--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,718 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree&family=Montserrat&family=Ubuntu&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
+  font-family: 'Figtree', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ 
+#space {
+  margin: 0;
+  height: fit-content;
+}
+
+/* Overlay section */
+
+.chat {
+  position: fixed;
+  width: 8rem;
+  height: 8rem;
+  right: 2rem;
+  bottom: 4.50rem;
+  z-index: 1;
+}
+
+.vecter-1 {
+  position: fixed;
+  align-self: center;
+  left: 0;
+  bottom: 0;
+}
+
+.vecter-2 {
+  position: fixed;
+  align-self: center;
+  left: 0;
+  bottom: 0;
+}
+
+/* Navbar */
+
+#navbar {
+  padding: 1% 3%;
+  background: #F8F9FD;
+}
+
+
+.login-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12.4444px 19.5556px;
+  gap: 8.89px;
+  color: white;
+  width: 150.22px;
+  height: 48px;
+  background: #6F57E9;
+  border-radius: 12.4444px;
+}
+
+.learn-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12.4444px 19.5556px;
+  gap: 8.89px;
+  width: 178.67px;
+  height: 48px;
+  border: 1.77778px solid #6F57E9;
+  border-radius: 12.4444px;
+  background: #F8F9FD;
+}
+
+/* HomePage login */
+
+.homepage-login {
+  background: #F8F9FD;
+  position: relative;
+}
+
+/* Header section */
+
+.header {
+  padding: 2% 3%;
+}
+
+.main-header {
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 50px;
+  text-align: center;
+  color: #000000;
+}
+
+.sub-header {
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #000000;
+}
+
+/* Searchbar section */
+
+.searchbar-container {
+
+  padding: 1% 7%;
+}
+
+.searchbar {
+  background-color: white;
+  background: #FFFFFF;
+  box-shadow: 296px 536px 245px rgba(21, 31, 72, 0.01), 167px 302px 207px rgba(21, 31, 72, 0.05), 74px 134px 153px rgba(21, 31, 72, 0.09), 19px 34px 84px rgba(21, 31, 72, 0.1), 0px 0px 0px rgba(21, 31, 72, 0.1);
+  border-radius: 14px;
+  justify-content: center;
+  padding: 1% 0;
+}
+
+.search-form {
+  justify-content: center;
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.search-input {
+  align-items: center;
+  border: 2px solid white;
+  width: auto;
+  background-image: url('./assets/location.svg');
+  background-repeat: no-repeat;
+  text-indent: 30px;
+  justify-content: center;
+  display: flex;
+  background-position: 15px;
+  color: 1px solid #6F57E9;
+  padding: 10px 20px;
+  display: flex;
+  color: #393939;
+}
+
+.city-dropdown {
+width: 260px;
+height: 81px;
+
+background: #FFFFFF;
+box-shadow: 90px 20px 37px rgba(0, 0, 0, 0.01), 51px 11px 31px rgba(0, 0, 0, 0.05), 23px 5px 23px rgba(0, 0, 0, 0.09), 6px 1px 13px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+border-radius: 14px;
+}
+
+.recent {
+  font-family: 'Figtree';
+font-style: normal;
+font-weight: 600;
+font-size: 13px;
+line-height: 120%;
+}
+
+.recent1 {
+  display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 10px;
+
+width: auto;
+height: 13px;
+
+
+/* Inside auto layout */
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 600;
+font-size: 11px;
+line-height: 120%;
+/* or 13px */
+
+
+color: #000000;
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.recent2 {
+  font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 120%;
+/* or 13px */
+
+
+color: #808080;
+}
+
+input[type=text]:focus {
+  border: 2px solid  #6F57E9;
+  border-radius: 14px;
+  outline: none !important;
+}
+.ant-input:focus {
+  border: 2px solid  #6F57E9;
+  border-radius: 14px;
+  outline: none !important;
+}
+.date-input:hover {
+  border: 2px solid  #6F57E9;
+  border-radius: 14px;
+  outline: none !important;
+}
+.date-input {
+  align-items: center;
+  border: none;
+  width: auto;
+  background-image: none;
+  background-repeat: no-repeat;
+  text-indent: 30px;
+  justify-content: center;
+  display: flex;
+  background-position: 15px;
+  padding: 1% 16%;
+  color: gray;
+}
+
+.ship-input {
+  align-items: center;
+  border: none;
+  width: auto;
+  background-image: url('./assets/ship.svg');
+  background-repeat: no-repeat;
+  text-indent: 30px;
+  justify-content: center;
+  display: flex;
+  background-position: 15px;
+}
+
+.search-span {
+  display: flex;
+  width: 21%;
+  justify-content: center;
+  color: #6F57E9;
+}
+
+.arrow-btn {
+  border: none;
+  background-color: white;
+}
+
+.vl {
+  border-left: 1.5px solid #B9B9B9;
+}
+
+.vl1 {
+  border-left: 1.5px solid #B9B9B9;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-right: 1.5px solid #B9B9B9;
+}
+
+.load-drop-menu {
+  /* width: 150%; */
+  margin:2px 0;
+  width: 453px;
+height: 359px;
+border: none;
+background: #FFFFFF;
+box-shadow: 90px 20px 37px rgba(0, 0, 0, 0.01), 51px 11px 31px rgba(0, 0, 0, 0.05), 23px 5px 23px rgba(0, 0, 0, 0.09), 6px 1px 13px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+padding: 1rem;
+
+}
+.load-drop-label-radio {
+  font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 120%;
+/* identical to box height, or 16px */
+
+
+color: #595959;
+}
+
+/* .load-input {
+  color: #6F57E9;
+  background-color: #6F57E9;
+} */
+.form-check-input:checked {
+  background-color: white;
+  border-color: #6F57E9;
+}
+
+.form-check-input:checked[type=radio] {
+  --bs-form-check-bg-image: url('./assets/Ellipse4.svg');
+}
+.load-input1 {
+  background-color: #6F57E9;
+  width: 100px;
+}
+
+/* service section */
+
+.services {
+  padding: 1% 3% 12%;
+  height: auto;
+
+}
+
+.service-header {
+
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 33px;
+  line-height: 120%;
+  text-align: center;
+  color: #000000;
+}
+
+.row {
+  justify-content: center;
+  padding-top: 0.5rem;
+}
+
+.service {
+  display: flex;
+  align-items: flex-start;
+  padding: 28px 24px;
+  gap: 20px;
+  flex-wrap: wrap;
+  width: 23%;
+  min-height: 212px;
+  background: #FFFFFF;
+  box-shadow: 0px 146px 58px rgba(0, 0, 0, 0.01), 0px 82px 49px rgba(0, 0, 0, 0.05), 0px 36px 36px rgba(0, 0, 0, 0.09), 0px 9px 20px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+}
+
+.serivice-top {
+  flex-direction: row;
+  display: flex;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+
+}
+
+.service-title {
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 130%;
+  text-align: center;
+  color: #000000;
+}
+
+.line {
+  width: 277px;
+  height: 0px;
+  position: relative;
+  border: 0.7px solid #9E9E9E;
+}
+
+.service-content {
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  text-align: start;
+  margin: 0;
+  color: #535353;
+}
+
+/* Shipping Details */
+
+.update {
+  padding: 3% 3%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.step {
+  width: 60%;
+ 
+}
+.step-btn {
+  padding-bottom: 20%;
+}
+
+
+
+.bottom {
+  display: flex;
+  justify-content:flex-start;
+  flex-direction: row;
+  padding-bottom: 10%;
+}
+
+#option1, #option2, #option3 {
+  border-radius: 14px;
+  padding: 12px 24px;
+}
+
+.selectors {
+  display: flex;
+  justify-content: flex-start;
+  display: inline-flex;
+  flex-direction: column;
+  width: 100%;
+ 
+}
+
+.selector-div {
+  background: #EBE8FF;
+  width: fit-content;
+  border-radius: 14px;
+  height: fit-content;
+  margin-bottom: 32px;
+}
+
+.btn-secondary {
+  border: 3px solid #EBE8FF;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 120%;
+  box-shadow: 4px 3px 10px rgba(0, 0, 0, 0.1);
+  width: 256px;
+}
+
+.btn-secondary {
+  --bs-btn-color: gray;
+  --bs-btn-bg: #EBE8FF;
+  --bs-btn-border-color:  #EBE8FF;
+  --bs-btn-hover-color:#6F57E9 ;
+  --bs-btn-hover-bg: white;
+  --bs-btn-hover-border-color: 3px solid #6F57E9 ;
+  --bs-btn-focus-shadow-rgb: 25,135,84;
+  --bs-btn-active-color: #6F57E9;
+  --bs-btn-active-bg: white;
+  --bs-btn-active-border-color: 3px solid #6F57E9 ;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #EBE8FF;
+  --bs-btn-disabled-bg: #EBE8FF;
+  --bs-btn-disabled-border-color: none;
+  --bs-gradient: none;
+}
+
+.features {
+  width: 380px;
+  height: auto;
+  display: flex;
+  justify-content: flex-start;
+  padding: 3% 13%;
+  flex-direction: column;
+}
+
+.feature-p {
+  text-align: left;
+  font-family: 'Figtree';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  /* or 19px */
+  color: #000000;
+  display: flex;
+  width: 100%;
+}
+#unbold {
+  font-weight: 200;
+}
+.f-span {
+  display: flex;
+  flex-direction: row;
+}
+.f-icon {
+  position: relative;
+  right: 1px;
+  color: #000000;
+}
+
+.search-result {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10%;
+}
+.service-result {
+  box-sizing: border-box;
+
+width: 791px;
+height: 144px;
+padding: 2% 3%;
+background: #FFFFFF;
+border: 1px solid rgba(218, 218, 218, 0.4);
+box-shadow: 39px 216px 88px rgba(0, 0, 0, 0.01), 22px 122px 74px rgba(0, 0, 0, 0.05), 10px 54px 55px rgba(0, 0, 0, 0.09), 2px 14px 30px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+border-radius: 14px;
+/* justify-content: flex-start; */
+display: flex;
+justify-content:flex-start;
+flex-direction: row;
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.best-value {
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 10px;
+gap: 10px;
+
+width: 97px;
+height: 33px;
+
+background: #AFFFAD;
+border-radius: 12px;
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 120%;
+margin: 0;
+/* or 13px */
+
+text-align: center;
+
+color: #000000;
+}
+
+.circle {
+  width: 9px;
+height: 9px;
+border-radius: 50px;
+background: #05FF00;
+}
+.Express {
+  display: flex;
+flex-direction: row;
+justify-content: right;
+align-items: center;
+padding: 10px;
+gap: 10px;
+margin: 0;
+width: 70px;
+height: 33px;
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 120%;
+
+/* identical to box height, or 16px */
+
+text-align: right;
+
+color: #FF0000;
+}
+
+.status {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.sl {
+  border-left: 1.5px solid #B9B9B9;
+  height: 20px;
+}
+.time {
+  font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 120%;
+padding: 3px 3px 0;
+/* or 13px */
+
+text-align: center;
+
+color: #565656;
+margin: 0 5px
+}
+.route {
+  /* width: 79px;
+height: 16px; */
+
+/* Body */
+
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 120%;
+/* identical to box height, or 16px */
+
+text-align: center;
+
+color: #565656;
+margin: 0;
+justify-content: center;
+display: flex;
+}
+.route1 {
+  /* width: 79px;
+height: 16px; */
+
+/* Body */
+
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 120%;
+/* identical to box height, or 16px */
+
+text-align: center;
+
+color:  #808080;
+;
+margin: 0;
+justify-content: center;
+display: flex;
+}
+.hl {
+  width: 24px;
+height: 0px;
+
+border: 1px solid #565656;
+}
+
+.padding-bottom-10 {
+  padding: 0 0 10px;
+}
+
+.service-left {
+  width: 100%;
+    display: table-footer-group;
+}
+
+.vll {
+  width: 0px;
+  height: 100%;
+  
+  border: 1px solid rgba(163, 163, 163, 0.4);
+}
+.right-service {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0 0 10px;
+}
+.service-price {
+  font-family: 'Figtree';
+font-style: normal;
+font-weight: 700;
+font-size: 19px;
+line-height: 120%;
+/* identical to box height, or 23px */
+margin: 0;
+text-align: center;
+
+color: #000000;
+}
+
+.select-btn {
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 10px 34px;
+gap: 10px;
+border: #6F57E9;
+width: 101px;
+height: 39px;
+color: white;
+background: #6F57E9;
+border-radius: 14px;
+margin-top: 6px;
+}
+.view-details {
+  width: 60px;
+height: 13px;
+
+font-family: 'Figtree';
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 120%;
+/* or 13px */
+
+text-align: center;
+text-decoration-line: underline;
+/* margin: 0; */
+color: #363636;
 }
